--- a/my_app/templates/block_create.html
+++ b/my_app/templates/block_create.html
@@ -308,7 +308,12 @@
 </html>  {% endcomment %}
 
 
-<!DOCTYPE html>
+
+
+
+
+ 
+{% comment %} <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -468,4 +473,295 @@
       crossorigin="anonymous"
     ></script>
   </body>
+</html>  {% endcomment %}
+
+
+
+
+
+
+
+{% comment %} <!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
+    <!-- Load custom CSS -->
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'css/style.css' %}" />
+
+    <!-- Bootstrap CSS -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+      crossorigin="anonymous"
+    />
+
+    <title>Block Create / Node</title>
+  </head>
+  <body>
+    <!-- Navigation Bar -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-sm">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">{{ request.user.username }}</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="{% url 'logout' %}">Logout</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <br />
+
+    <!-- Form to Create Block -->
+    <div class="container">
+      <div class="card shadow-lg p-4 bg-light">
+        <h2 class="text-center mb-4">Create New Block / Node</h2>
+        <form action="" method="POST" class="w-75 mx-auto">
+          {% csrf_token %}
+          <div class="mb-3">
+            <label for="first-name" class="form-label">First Name</label>
+            <input
+              type="text"
+              class="form-control"
+              id="first-name"
+              name="first"
+              placeholder="Enter first name"
+              value="{{ first_name|default:'' }}"
+              required
+            />
+          </div>
+
+          <div class="mb-3">
+            <label for="last-name" class="form-label">Last Name</label>
+            <input
+              type="text"
+              class="form-control"
+              id="last-name"
+              name="last"
+              placeholder="Enter last name"
+              value="{{ last_name|default:'' }}"
+              required
+            />
+          </div>
+
+          <div class="mb-3">
+            <label for="data" class="form-label">Data</label>
+            <input
+              type="text"
+              class="form-control"
+              id="data"
+              name="data"
+              placeholder="Enter data"
+              value="{{ data|default:'' }}"
+              required
+            />
+          </div>
+
+          <div class="text-center">
+            <button type="submit" class="btn btn-primary w-100">Submit</button>
+          </div>
+        </form>
+
+        <!-- Hyperledger Button -->
+        <div class="text-center mt-4">
+          <a href="{% url 'hyperledger_view' %}" class="btn btn-secondary w-50">Go to Hyperledger</a>
+        </div>
+
+        <!-- Display the Blockchain -->
+        <h3 class="text-center mt-5">Blockchain</h3>
+        <div class="container">
+          {% if blockchain %}
+            <ul class="list-group">
+              {% for block in blockchain %}
+                <li class="list-group-item">
+                  <strong>Block #{{ block.index }}</strong> <br />
+                  <strong>Data:</strong> {{ block.data }} <br />
+                  <strong>Previous Hash:</strong> {{ block.previous_hash }} <br />
+                  <strong>Current Hash:</strong> {{ block.current_hash }} <br />
+                  <strong>Timestamp:</strong> {{ block.timestamp }} <br />
+                </li>
+              {% endfor %}
+            </ul>
+          {% else %}
+            <p>No blocks in the blockchain yet.</p>
+          {% endif %}
+        </div>
+
+        <div class="mt-5 text-center">
+          <p><strong>Logged in as:</strong> {{ request.user.username }}</p>
+        </div>
+      </div>
+    </div>
+
+    <!-- Bootstrap JS -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+      crossorigin="anonymous"
+    ></script>
+  </body>
+</html>   {% endcomment %}
+
+
+
+
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
+    <!-- Load custom CSS -->
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'css/style.css' %}" />
+
+    <!-- Bootstrap CSS -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+      crossorigin="anonymous"
+    />
+
+    <title>Block Create / Node</title>
+  </head>
+  <body>
+    <!-- Navigation Bar -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-sm">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">{{ request.user.username }}</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="{% url 'logout' %}">Logout</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <br />
+
+    <!-- Form to Create Block -->
+    <div class="container">
+      <div class="card shadow-lg p-4 bg-light">
+        <h2 class="text-center mb-4">Create New Block / Node</h2>
+        <form action="" method="POST" class="w-75 mx-auto">
+          {% csrf_token %}
+          <div class="mb-3">
+            <label for="first-name" class="form-label">First Name</label>
+            <input
+              type="text"
+              class="form-control"
+              id="first-name"
+              name="first"
+              placeholder="Enter first name"
+              value="{{ first_name|default:'' }}"
+              required
+            />
+          </div>
+
+          <div class="mb-3">
+            <label for="last-name" class="form-label">Last Name</label>
+            <input
+              type="text"
+              class="form-control"
+              id="last-name"
+              name="last"
+              placeholder="Enter last name"
+              value="{{ last_name|default:'' }}"
+              required
+            />
+          </div>
+
+          <div class="mb-3">
+            <label for="data" class="form-label">Data</label>
+            <input
+              type="text"
+              class="form-control"
+              id="data"
+              name="data"
+              placeholder="Enter data"
+              value="{{ data|default:'' }}"
+              required
+            />
+          </div>
+
+          <div class="text-center">
+            <button type="submit" class="btn btn-primary w-100">Submit</button>
+          </div>
+        </form>
+
+        <!-- Decrypted Blocks Button -->
+        <div class="text-center mt-4">
+          <a href="{% url 'decrypted_blocks' %}" class="btn btn-info w-50">Go to Decrypted Blocks</a>
+        </div>
+
+        <!-- Hyperledger Button -->
+        <div class="text-center mt-4">
+          <a href="{% url 'hyperledger_view' %}" class="btn btn-secondary w-50">Go to Hyperledger</a>
+        </div>
+
+        <!-- Display the Blockchain -->
+        <h3 class="text-center mt-5">Blockchain</h3>
+        <div class="container">
+          {% if blockchain %}
+            <ul class="list-group">
+              {% for block in blockchain %}
+                <li class="list-group-item">
+                  <strong>Block #{{ block.index }}</strong> <br />
+                  <strong>Data:</strong> {{ block.data }} <br />
+                  <strong>Previous Hash:</strong> {{ block.previous_hash }} <br />
+                  <strong>Current Hash:</strong> {{ block.current_hash }} <br />
+                  <strong>Timestamp:</strong> {{ block.timestamp }} <br />
+                </li>
+              {% endfor %}
+            </ul>
+          {% else %}
+            <p>No blocks in the blockchain yet.</p>
+          {% endif %}
+        </div>
+
+        <div class="mt-5 text-center">
+          <p><strong>Logged in as:</strong> {{ request.user.username }}</p>
+        </div>
+      </div>
+    </div>
+
+    <!-- Bootstrap JS -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
+
